@@ -22,6 +22,10 @@ Info: This package appears to be the initial packaging of a new upstream
  .
  This warning can also be ignored if the package is not intended for Debian or
  if it is a split of an existing Debian package.
+ .
+ Please add a justification to your changelog entry; Lintian looks in this
+ version's changelog entry for the relevant package name or the phrase
+ "Python 2 version" or similar.
 
 Tag: python-foo-but-no-python3-foo
 Severity: normal
