@@ -1,0 +1,10 @@
+{$source} ({$version}) {$distribution}; urgency=low
+
+  * Lintian Test Suite.
+  * Test: {$testname}
+  * python-{$source} is packaged because...
+
+  * Suppress "should close ITP bug" messages.  (Closes: #123456)
+
+ -- {$author}  {$date}
+
