@@ -2,6 +2,10 @@ lintian (2.5.69) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/python.pm:
+    + [CL] Don't emit new-package-should-not-package-python2-module if
+      the maintainer justifies its inclusion in the changelog entry.
+
  -- Chris Lamb <lamby@debian.org>  Tue, 09 Jan 2018 20:55:21 +0530
 
 lintian (2.5.68) unstable; urgency=medium
